# wallet

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/application/dto/: reminder.py  transaction.py
app/application/interfaces/: reminder_notification.py
app/application/use_cases/analytics/: get_report.py
app/application/use_cases/budgets/: manage_budgets.py
app/application/use_cases/categories/: manage_categories.py
app/application/use_cases/debts/: manage_debts.py
app/application/use_cases/installments/: manage_installments.py
app/config/: settings.py
app/domain/entities/: budget.py  category.py  debt.py  installment.py  reminder.py  savings.py  transaction.py
app/domain/exceptions/: base.py
app/domain/repositories/: abstract_budget.py  abstract_category.py  abstract_debt.py  abstract_installment.py  abstract_reminder.py  abstract_savings.py  abstract_transaction.py  abstract_user.py
app/domain/value_objects/: credit_calculator.py  money.py
app/infrastructure/: container.py
app/infrastructure/currency/: cbu_client.py
app/infrastructure/db/models/: __init__.py  (+9 more)
app/infrastructure/export/: csv_exporter.py  excel_exporter.py
app/infrastructure/notifications/: scheduler.py
app/presentation/telegram/: router.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial_schema.py  0002_add_reminders_table.py  0003_add_dolgi_category.py  0004_update_personal_categories.py  0005_add_transaction_currency_fields.py
(+39 files in other folders)
