[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wallet-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.13.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "APScheduler==3.10.4",
    "openpyxl==3.1.5",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "pytz==2024.2",
    "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
